crates/derive/tests/ui/invalid_inline_grammar.stderr
error: nanachi compile error: Parse(ParseError { message: "unexpected character '@'", offset: 13 })
 --> tests/ui/invalid_inline_grammar.rs:5:8
  |
5 | struct InvalidInlineGrammar;
  |        ^^^^^^^^^^^^^^^^^^^^
