crates/derive/tests/ui/invalid_inline_grammar.rs
use nanachi_derive::Parser;

#[derive(Parser)]
#[grammar_inline("rule = { \"x\" @ \"y\" }")]
struct InvalidInlineGrammar;

fn main() {}
